[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/IngameMenu.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0.054902, 0.054902, 1 )

[sub_resource type="CapsuleMesh" id=2]
resource_local_to_scene = true
material = SubResource( 1 )
radius = 0.53
mid_height = 1.25
radial_segments = 32
rings = 4

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 1.2, 0.5, 0.4 )

[sub_resource type="CylinderShape" id=8]
resource_local_to_scene = true
height = 2.25
radius = 0.5

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Inter.ttf"

[sub_resource type="DynamicFont" id=6]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.125, 0 )
mesh = SubResource( 2 )

[node name="Glasses" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, -1.25 )
visible = false
mesh = SubResource( 4 )

[node name="Collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.125, 0 )
shape = SubResource( 8 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.625, 0 )

[node name="Camera" type="Camera" parent="Head"]
near = 0.01
far = 256.0

[node name="BackUpAimPoint" type="Position3D" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100 )

[node name="AimCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38419e-07, -0.551811 )
enabled = true
cast_to = Vector3( 0, -1, -1000 )
collide_with_areas = true

[node name="GunPosition" type="Spatial" parent="Head/Camera"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.244025, -0.261438, -0.521037 )

[node name="FloorCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.2, 0 )

[node name="NameTag" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
pixel_size = 0.025
billboard = 2
alpha_cut = 1
text = "Placeholder"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Health" type="RichTextLabel" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -50.0
margin_right = 99.0
rect_pivot_offset = Vector2( 113, 66 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "100"
text = "100"
fit_content_height = true

[node name="Ammo" type="RichTextLabel" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -137.0
margin_top = -50.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
text = "30/300"
fit_content_height = true

[node name="Money" type="RichTextLabel" parent="HUD"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 167.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 113, 66 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
text = "$250"
fit_content_height = true

[node name="Crosshair" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -5.0
margin_right = 15.0
margin_bottom = 9.0
text = "."
align = 1
valign = 1

[node name="Menu" type="Control" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -137.5
margin_right = 75.0
margin_bottom = 137.5
custom_constants/separation = 32

[node name="Label" type="Label" parent="HUD/Menu/VBoxContainer"]
margin_right = 150.0
margin_bottom = 14.0
text = "Menu"
align = 1

[node name="LeaveButton" type="Button" parent="HUD/Menu/VBoxContainer"]
margin_top = 46.0
margin_right = 150.0
margin_bottom = 66.0
text = "Leave"

[node name="CloseButton" type="Button" parent="HUD/Menu/VBoxContainer"]
margin_top = 98.0
margin_right = 150.0
margin_bottom = 118.0
text = "Close Menu"

[connection signal="pressed" from="HUD/Menu/VBoxContainer/LeaveButton" to="HUD/Menu" method="_on_LeaveButton_pressed"]
[connection signal="pressed" from="HUD/Menu/VBoxContainer/CloseButton" to="HUD/Menu" method="_on_CloseButton_pressed"]
